OOP_structures/note.txt
* Используйте .gitignore, чтобы исключить bin/ obj/ .depend .layout (и др. генерируемые файлы, если будут)
* friend operator << после private/protected - формально возможно, т.к. это не член класса и на него не влияет public/private, но может сбивать с толку
* Похоже, что стек копируется не за один проход
* Нет метода size() для определения размера
* Ошибка компиляции для очереди:
  queue.h:24:19: error: expected ‘)’ before ‘<’ token
   24 |     Queue<T>(Stack<T> &&q): head(q.head), tail(q.tail) {head = nullptr; tail = nullptr;}
      |             ~     ^
      |                   )
* Стек основные тесты пока проходит

02.12
* Все еще нет копирования стека за один проход?

02.12 (a)
* Стек основные тесты пока проходит

09.12

* Итераторы надо сделать в базовом классе, они по сути одинаковы, отличаются только begin/end, которые уже определяются в дочерних классах
* После этого print() будет не нужен, можно использовать итераторы
* Хорошо бы иметь сравнение const и не-const итераторов
* В основных тестах сейчас все чисто

16.12
* Итераторы все еще не там (д.б. в  базовом классе, так же как и begin/end)
* Тесты не компилируются - доводите до ума

21.12
* компилятор выдает ошибки, если игнорировать (-fpermissive) - valgrind выдает ошибки с памятью в тестах